[package]
name = "daydream"
version = "0.1.0"
authors = ["MTRNord <info@nordgedanken.de>"]
edition = "2018"
license = "AGPL-v3.0"
repository = "https://github.com/MTRNord/Daydream"
description = "A Matrix Web client written in Rust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1" }
log = "0.4"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0.53"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.12"
wasm-logger = "0.2"
wee_alloc = "0.4"
yew = { git = "https://github.com/yewstack/yew" }
yew-router = { git = "https://github.com/yewstack/yew" }
yewtil = { git = "https://github.com/yewstack/yew" }

# Matrix
matrix-sdk = { version = "0.1.0", git = "https://github.com/MTRNord/matrix-rust-sdk", branch = "expose-send-rebased", default-features = false}# features = ["encryption"]}
url = "2.1.1"
thiserror = "1.0"
futures-locks = { git = "https://github.com/asomers/futures-locks", default-features = false }

# Markdown
pulldown-cmark = "0.7.1"

# Translations
tr = { version = "0.1.3", default-features = false, features = ["gettext"]}
i18n-embed = { version = "0.4", features = ["web-sys-requester"] }
rust-embed = { version = "5", features = ["debug-embed", "compression"]}

[dev-dependencies]
reqwest = { version = "0.10", features = ["json"] }
fantoccini = "0.13.1"
tokio = { version = "0.2", features = ["full"] }


[dependencies.web-sys]
version = "0.3"
features = [
  'KeyboardEvent',
  'HtmlElement',
  'DomStringMap'
]

[patch.crates-io]
olm-sys = { git = "https://gitlab.gnome.org/stoically/olm-sys", branch = "wasm-target" }
cjson = { git = "https://github.com/engineerd/cjson" }
ruma-events = { git = "https://github.com/ruma/ruma-events", rev="3f74ba327093d4f32e11c2741aaa649e4ab733d9" }

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggresive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
