[package]
name = "daydream"
version = "0.1.0"
authors = ["MTRNord <info@nordgedanken.de>"]
edition = "2018"
license = "AGPL-v3.0"
repository = "https://github.com/MTRNord/Daydream"
description = "A Matrix Web client written in Rust"

[[bin]]
name = "daydream_app"
path = "src/bin/app.rs"

[[bin]]
name = "daydream_worker"
path = "src/bin/native_worker.rs"

[dependencies]
console_error_panic_hook = { version = "0.1" }
log = "0.4"
tracing = {version = "0.1", features = ["log-always"] }
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
#wee_alloc = "0.4"
lazy_static = "1.4.0"

# Yew
yew = { git = "https://github.com/daydream-mx/yew.git", branch = "MTRNord/daydream-no-bincode" }
yew-router = { git = "https://github.com/daydream-mx/yew.git", branch = "MTRNord/daydream-no-bincode" }
yewtil = { git = "https://github.com/daydream-mx/yew.git", branch = "MTRNord/daydream-no-bincode" }

# Matrix
#, branch = "daydream"
matrix-sdk = { version = "0.1.0", git = "https://github.com/DevinR528/matrix-rust-sdk", default-features = false, features = ["messages"], branch = "power-ev-overflow"}# rev = "89c9e311408d2c57245f4ec5af7bbd4daa0046d3" # features = ["encryption"]}
url = "2.1.1"
thiserror = "1.0"
futures-locks = { git = "https://github.com/asomers/futures-locks", default-features = false }

# Markdown
pulldown-cmark = "0.7.2"

# Translations
tr = { version = "0.1.3", default-features = false, features = ["gettext"]}
i18n-embed = { version = "0.6", features = ["web-sys-requester"] }
rust-embed = { version = "5", features = ["debug-embed", "compression"]}

# Make links links again!
linkify = "0.4.0"

# Used for lightboxes
rand = "0.7"

[dependencies.web-sys]
version = "0.3"
features = [
  'KeyboardEvent',
  'HtmlElement',
  'DomStringMap',
  'Notification',
  'NotificationPermission',
  'NotificationOptions',
  'Window'
]

[patch.'https://github.com/seanmonstar/reqwest']
reqwest = { git = "https://github.com/seanmonstar//reqwest", rev = "d42385e7f2cc364efa5e16a7154e7e0cebdd1b57"}

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggresive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
